# tiny-model

./: .gitignore  Makefile
benchmarks/: SPEC.md  benchmark_coverage.py  pyproject.toml
docs/: CF-0-equal-partition-compiler-frontend-pilot.md  PE-0-positional-encoding-ablation.md
knowledge-extractor/: .gitignore  README.md  ROADMAP.md  SPEC.md  pyproject.toml
knowledge-extractor/configs/: custom.yaml.example  tier1.yaml  tier2.yaml  tier3.yaml
knowledge-extractor/docs/datasets/: README.md  domain-standards.md  knowledge-countries.md  knowledge-natural-earth.md  knowledge-osm-gb.md  linguistics-framenet.md  linguistics-morphology.md  linguistics-verbnet.md  linguistics-wordnet.md
knowledge-extractor/examples/: README.md  run_demo.py
knowledge-extractor/src/knowledge_extractor/: __init__.py  base.py  cli.py  filter.py  io_utils.py  manifest.py  normaliser.py  paths.py  registry.py  runner.py  tokeniser_check.py  writer.py
knowledge-extractor/src/knowledge_extractor/ast/treesitter/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/domain/standards/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/knowledge/countries/: __init__.py  _data.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/knowledge/natural_earth/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/knowledge/osm_gb/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/knowledge/wikidata/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/linguistics/collocations/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/linguistics/framenet/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/linguistics/morphology/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/linguistics/verbnet/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/src/knowledge_extractor/linguistics/wordnet/: __init__.py  downloader.py  extractor.py  model.py
knowledge-extractor/tests/: test_base.py  test_countries.py  test_io_utils.py  test_natural_earth.py  test_normaliser.py  test_osm_gb.py  test_paths.py  test_registry.py  test_standards.py  test_treesitter.py  test_wikidata.py  test_writer.py
model/v11/: README.md  config.json
model/v11-core/: README.md  pyproject.toml
model/v11-core/src/tiny_model_v11/: __init__.py  loader.py  model.py
model/v11-train/: README.md  bootstrap_held_out_gap.py  convert_to_safetensors.py  eval_held_out.py  pyproject.toml  train_tinystories.py  train_tok2.py  train_v11_replication.py
model/v11/artifacts_pinned_replication/: training_log.txt  training_results.json
tokenizer/: Cargo.toml
tokenizer/v11/: README.md  SPEC.md  preprocess_wordnet.py
tokenizer/v11-bench/: Cargo.toml
tokenizer/v11-builder/: Cargo.toml
tokenizer/v11-cli/: Cargo.toml
tokenizer/v11-cli/src/: main.rs
tokenizer/v11-core/examples/: check_call_encoding.rs
tokenizer/v11-demos/: Cargo.toml
tokenizer/v11-python/: Cargo.toml  README.md
tokenizer/v12/: README.md  assemble_c8_corpus.py  build_code_corpus.py  build_pure_byte_vocab.py  c8_code_corpus.jsonl  c8_corpus_v0.jsonl  c8_corpus_v0.txt  candidates.jsonl  evaluate_candidate.py  train_byte_level_bpe.py  train_candidate.py
(+42 files in other folders)
