[project]
name = "knowledge-extractor"
version = "0.3.1"
description = "Dataset-oriented triple extraction pipeline with split download and extract phases"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lemminflect>=0.2.3",
    "nltk>=3.9",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# `tree-sitter-languages` is unmaintained and only has wheels up to py3.11;
# `tree-sitter-language-pack` is the active fork with wheels for 3.11-3.13.
ast = ["tree-sitter>=0.23", "tree-sitter-language-pack>=0.3"]
# pyosmium publishes as `osmium` on PyPI. Binary wheels are available for
# mainstream platforms; source builds need libosmium/expat/zlib headers.
osm = ["osmium>=3.7"]
# Natural Earth ships as shapefile bundles. pyshp is pure Python, no deps.
natural-earth = ["pyshp>=2.3"]
tokeniser = ["transformers>=4.40"]
dev = ["pytest>=8.0"]

[project.scripts]
knowledge-extractor = "knowledge_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_extractor"]
