[project]
name = "tiny-model-v11"
version = "0.1.0"
description = "TinyModel v11 architecture (decoder-only transformer, Gemma-like: RMSNorm, RoPE, GQA, gated FFN)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_model_v11"]
