[project]
name = "tiny-model-v11-train"
version = "0.1.0"
description = "Training scripts for TinyModel v11"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tiny-model-v11",
    "sentencepiece>=0.2",
    "torch>=2.2",
    "datasets>=2.18",
    "tokenizers>=0.20",
]

[tool.uv.sources]
tiny-model-v11 = { path = "../v11-core", editable = true }
